--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,99 @@
+* {
+  margin: 0;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.spinnner-class {
+  z-index: 100;
+}
+
+.checkout-link {
+  margin: 5px;
+  background-color: rgb(226, 148, 78);
+  color: white;
+  border-radius: 20px !important;
+  text-decoration: none !important;
+  box-shadow: 0px 8px 5px black;
+  margin-bottom: 1rem;
+}
+
+.remove-line {
+  text-decoration: none !important;
+}
+
+.custom-form {
+  width: 50%;
+  margin: auto;
+  border: 1px solid;
+  padding: 26px;
+  box-shadow: 5px 10px 18px #ff8100;
+  margin-top: 50px;
+  border-radius: 30px;
+}
+
+.cart-design {
+  margin: auto;
+  border: 1px solid;
+  padding: 26px;
+  box-shadow: 5px 10px 18px #ff8100;
+  border-radius: 30px;
+}
+
+.total-cart {
+  border: 1px solid;
+  padding: 14px;
+  max-width: 400px !important;
+  box-sizing: border-box;
+  box-shadow: 5px 10px 13px #ff8100;
+  border-radius: 0px 20px;
+}
+
+.cart-btn {
+  float: right;
+  position: absolute;
+  bottom: 53px;
+  right: 13px;
+}
+
+.navbar-color {
+  background-color: rgb(25, 172, 230) !important;
+}
+
+.nav-pills .nav-link.active,
+.nav-pills .show > .nav-link {
+  color: #fff;
+  background-color: #ff8100 !important;
+}
+
+.navbar-light .navbar-nav .nav-link {
+  color: #f8f9fa !important;
+}
+
+.cart {
+  transition: all 0.5s ease-out;
+}
+
+.video-cust {
+  height: 500px;
+  margin-top: 14px;
+  margin: auto;
+  position: relative;
+  left: 25%;
+  border: 10px solid;
+}
+
+.video-border {
+  margin-top: 10px;
 }
